# Thikra

./: AGENTS.md  CLAUDE.md  README.md  package.json  settings.html  vite.config.ts
docs/: commands.md
scripts/: kill-dev-port.cjs
src/: App.css  App.tsx  main.tsx  settings-main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/prompts/: system_prompt.txt
src-tauri/src/: activator.rs  agent.rs  autostart.rs  commands.rs  computer_control.rs  context.rs  database.rs  gateway.rs  history.rs  kite.rs  lib.rs  main.rs  models.rs  onboarding.rs  permissions.rs  screenshot.rs  settings_commands.rs  tts.rs  windows_activator.rs  windows_focus.rs  windows_permissions.rs  windows_screenshot.rs
src-tauri/src/config/: defaults.rs  loader.rs  mod.rs  schema.rs  tests.rs  writer.rs
src-tauri/src/providers/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/search/: pipeline.rs
src-tauri/src/settings_commands/: tests.rs
src-tauri/src/settings_commands/settings_commands/: tests.rs
src-tauri/tests/: search_pipeline_e2e.rs
src/__tests__/: App.test.tsx  OnboardingView.test.tsx
src/components/: AgentIndicator.tsx  CapabilityMismatchStrip.tsx  ChatBubble.tsx  CommandSuggestion.tsx  ImagePreviewModal.tsx  MinibarView.tsx  ModelPicker.tsx  ModelPickerPanel.tsx  ProviderPickerPanel.tsx  SandboxSetupCard.tsx  SettingsView.tsx  SpeakButton.tsx  SwitchConfirmation.tsx  Tooltip.tsx  UpdateBanner.tsx  VoiceSelector.tsx  WindowControls.tsx
src/components/__tests__/: ModelPickerPanel.test.tsx  SandboxSetupCard.test.tsx  SearchTraceBlock.test.tsx  TipBar.test.tsx  UpdateBanner.test.tsx  UpdateFooterBar.test.tsx
src/config/: capabilityConflicts.ts  commandArtifacts.ts  commands.ts  searchWarnings.ts  tips.ts
src/config/__tests__/: commandArtifacts.test.ts  commands.test.ts
src/contexts/: ConfigContext.tsx
src/hooks/: useAgentMode.ts  useModelSelection.ts  useOllama.ts  useProvider.ts  useTts.ts
src/hooks/__tests__/: useAgentMode.test.ts  useConversationHistory.test.tsx  useOllama.test.tsx  useTts.test.tsx  (+1 more)
src/settings/: SettingsWindow.test.tsx  SettingsWindow.tsx  configHelpers.ts  types.ts
src/styles/: capability-mismatch.module.css  model-picker.module.css  settings.module.css
src/types/: model.ts
src/utils/: capabilityConflicts.ts  intentDetection.ts  notification.ts  platform.ts
src/view/: AskBarView.tsx  ConversationView.tsx
(+23 files in other folders)
